[gd_scene load_steps=6 format=3 uid="uid://ep1bs8xw1elp"]

[ext_resource type="Script" uid="uid://cl3nlpknpqw7g" path="res://HealthBarLogic.gd" id="1_ypcvb"]
[ext_resource type="PackedScene" uid="uid://cng2xndwwgtjy" path="res://game_over.tscn" id="2_n0c2p"]
[ext_resource type="PackedScene" uid="uid://bakpki44lj568" path="res://pause_menu.tscn" id="3_7onog"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xx2kh"]
bg_color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ypcvb"]
bg_color = Color(0.951401, 0.32934, 0.303198, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ypcvb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.451943, 0.994447, 0.808555, 1)

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 380.0
offset_top = 231.0
offset_right = 748.0
offset_bottom = 258.0
theme_override_styles/background = SubResource("StyleBoxFlat_xx2kh")
theme_override_styles/fill = SubResource("StyleBoxFlat_ypcvb")
max_value = 10.0
value = 5.0
show_percentage = false

[node name="TabBarBackground" type="Panel" parent="CanvasLayer"]
offset_left = 430.0
offset_top = 291.0
offset_right = 513.0
offset_bottom = 331.0

[node name="Label" type="Label" parent="CanvasLayer/TabBarBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Heal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="heal" type="Button" parent="CanvasLayer/TabBarBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabBarBackground2" type="Panel" parent="CanvasLayer"]
offset_left = 568.0
offset_top = 291.0
offset_right = 653.0
offset_bottom = 331.0

[node name="Label" type="Label" parent="CanvasLayer/TabBarBackground2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Hurt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hurt" type="Button" parent="CanvasLayer/TabBarBackground2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" parent="." instance=ExtResource("2_n0c2p")]

[node name="PauseMenu" parent="." instance=ExtResource("3_7onog")]
